chore 🚧: Implement list deliveries by deliveryman
