# src/modules/deliveryman/useCases/findAllDeliveries/FindAllDeliveriesDeliverymanController.ts
@@ -1,0 +1,20 @@
+import { Request, Response } from 'express';
+
+import { FindAllDeliveriesDeliverymanUseCase } from './FindAllDeliveriesDeliverymanUseCase';
+
+class FindAllDeliveriesDeliverymanController {
+  async handle(request: Request, response: Response): Promise<Response> {
+    const { id_deliveryman } = request;
+
+    const findAllDeliveriesDeliverymanUseCase =
+      new FindAllDeliveriesDeliverymanUseCase();
+
+    const deliveries = await findAllDeliveriesDeliverymanUseCase.execute(
+      id_deliveryman
+    );
+
+    return response.json(deliveries);
+  }
+}
+
+export { FindAllDeliveriesDeliverymanController };
